<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seperator">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:progress="0"
            android:max="100"/>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:layout_dodgeInsetEdges="bottom"
                >

                <com.skydoves.elasticviews.ElasticFloatingActionButton
                    android:id="@+id/fab_action_send"
                    android:background="@color/colorPrimaryDark"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorWhite"
                    app:layout_behavior=".helper.FabBehaviour"
                    android:layout_margin="@dimen/fab_margin"
                    app:fabutton_duration="@dimen/floating_button_duration"
                    app:fabutton_scale="@dimen/floating_button_scale"/>

                <com.skydoves.elasticviews.ElasticFloatingActionButton
                    android:id="@+id/fab_key"
                    android:background="@color/colorAccent"
                    app:backgroundTint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorWhite"
                    app:layout_behavior=".helper.FabBehaviour"
                    android:layout_margin="@dimen/fab_margin"
                    app:fabutton_duration="@dimen/floating_button_duration"
                    app:fabutton_scale="@dimen/floating_button_scale"/>

                <com.skydoves.elasticviews.ElasticFloatingActionButton
                    android:id="@+id/fab_yes"
                    android:visibility="gone"
                    android:background="@color/colorPrimaryDark"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    app:fabutton_duration="400"
                    app:fabutton_scale="0.85"/>

            </LinearLayout>

            <com.skydoves.elasticviews.ElasticFloatingActionButton
                android:id="@+id/fab_no"
                android:visibility="gone"
                android:background="@color/colorPrimaryDark"
                app:backgroundTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="@dimen/fab_margin"
                app:fabutton_duration="@dimen/floating_button_duration"
                app:fabutton_scale="@dimen/floating_button_scale"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/bottom"/>

    <HorizontalScrollView
        android:id="@+id/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="50dp">
        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>